[package]
name = "bulletproofs"
# Before doing a release:
# - update version field
# - update html_root_url
# - ensure yoloproofs was disabled in an atomic (revertable) commit
# - update CHANGELOG
version = "2.0.3"
authors = ["Cathie Yun <cathieyun@gmail.com>",
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>",
           "Drew Stone <drew@commonwealth.im>",
           "Filip Lazovic <filip@commonwealth.im>",
           "Shady Khalifa <shekohex@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/webb-tools/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = { version = "3.0.0", default-features = false, features = ["u64_backend",  "alloc"] }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9.0", default-features = false, features = ["alloc"] }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
serde_derive = { version = "1", default-features = false, optional = true }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
clear_on_drop = { version = "0.2", default-features = false }

sp-std = { version = "2.0.0", optional = true, default-features = false }


[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
yoloproofs = ["sp-std"]
std = ["serde", "serde_derive", "rand", "rand/std", "thiserror", "curve25519-dalek/serde"]

[[test]]
name = "range_proof"


